--- a/src/pages/admin/Frame.less
+++ b/src/pages/admin/Frame.less
@@ -6,6 +6,7 @@
             }
         }
     }
+
     // 图片那一列
     .ant-table-thead {
         >tr {
@@ -25,4 +26,26 @@
             margin-bottom: 0;
         }
     }
+}
+
+.filter {
+    // border: 1px solid #e8e8e8;
+    padding: 10px 5px;
+    border-radius: 5px;
+
+    .price {
+        margin-left: 0px !important;
+
+        input {
+            width: 100px;
+        }
+    }
+
+    .ant-form-item {
+        margin-left: 30px;
+    }
+}
+
+.addNew {
+    margin: 20px 0 10px 2px;
 }
