--- a/src/pages/admin/Frame.less
+++ b/src/pages/admin/Frame.less
@@ -28,22 +28,25 @@
     }
 }
 
-.filter {
-    // border: 1px solid #e8e8e8;
-    padding: 10px 5px;
-    border-radius: 5px;
+.form {
+    .filter {
+        // border: 1px solid #e8e8e8;
+        padding: 10px 5px;
+        border-radius: 5px;
 
-    .price {
-        margin-left: 0px !important;
+        .price {
+            margin-left: 0px !important;
 
-        input {
-            width: 100px;
+            input {
+                width: 100px;
+            }
+        }
+
+        .ant-form-item {
+            margin-left: 30px;
         }
     }
 
-    .ant-form-item {
-        margin-left: 30px;
-    }
 }
 
 .addNew {
